[tool.poetry]
name = "edgesimpy-tutorials"
package-mode = false
version = "1.0.0"
description = "Hands-on tutorials to help you understand how EdgeSimPy works and how to use it in your research"
authors = ["Paulo Severo <paulo.severo@edu.pucrs.br>"]

[tool.poetry.dependencies]
python = "^3.10"
edge-sim-py = {git = "https://github.com/EdgeSimPy/EdgeSimPy.git"}
matplotlib = "3.8.0"
pandas = "2.2.2"
numpy = "1.26.4"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
